# dynamic-crow-server

./: .gitignore  CMakeLists.txt  README.md
A/: CMakeLists.txt
A/include/: a.h
A/src/: a.cpp
B/: CMakeLists.txt
B/include/: b.h
B/src/: b.cpp
Common/: CMakeLists.txt
Common/include/: IEndpointProvider.h  IHttpServer.h
Service/: CMakeLists.txt  main.cpp
Service/include/: CrowHttpServer.h
Service/lib/: asio.cmake  crow.cmake
Service/src/: CrowHttpServer.cpp
Util/: CMakeLists.txt
Util/include/: DynamicLoader.h
Util/src/: DynamicLoader.cpp
